Bug 43614 - Crash when closing document and several Spreadsheet documents open
Summary: Crash when closing document and several Spreadsheet documents open
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
Master old -3.6
Hardware: Other All
: medium blocker
Assignee: Eike Rathke (retired, only occasionally showing up)
URL:
Whiteboard:
Keywords:
: 43821 (view as bug list)
Depends on:
Blocks: mab3.5
  Show dependency treegraph
 
Reported: 2011-12-07 21:18 UTC by Rainer Bielefeld Retired
Modified: 2011-12-15 14:13 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot (2.25 MB, image/png)
2011-12-07 21:18 UTC, Rainer Bielefeld Retired
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rainer Bielefeld Retired 2011-12-07 21:18:48 UTC
Created attachment 54209 [details]
Screenshot

Currently I get lots of crashes what makes CALC more or less unusable.

Steps how to reproduce  with Server installation of MSVC Master "LibO-dev 3.5.0 – WIN7 Home Premium (64bit) ENGLISH UI [Build ID: 485138f-e92bf75-4c1bcb5]" Win-x86@6 – 2011-12-06_21:37:02):

1. Start LibO from WIN explorer link to soffice.exe
   > Start Center Appears
2. Click 'New Spreadsheet'
   > New Spreadsheet will be opened
3. Menu 'File -> New -> Spreadsheet'
   > New Spreadsheet will be opened
4. Repeat Step 3 three times
   > 5 empty Spreadsheets are opened
6. Menu 'Window -> Click SECOND spreadsheet'
7. Click 'Close Document - X - Icon' at top right window corner
   Expected: This spreadsheet will be closed
   Actual: Crash

For me this behavior is nearby 100% reproducible. Not limited to this particular proceeding, Calc very often crashes. Attached Screenshot shows message window after Crash.

Additional strange effect: After having finished recovera and reopened 4 of the 5 Spreadsheets, I will not be able to open a new Spreadsheet by 'File -> New -> Spreadsheet'

New Effect, no crashes with Server installation of Master "LibO-dev 3.5.0 – WIN7 Home Premium (64bit) ENGLISH UI [Build ID:  a286353-090bcba-3bf3b94]" Win-x86@6 – 2011-12-02_22:36:35)
Comment 1 Rainer Bielefeld Retired 2011-12-07 21:56:23 UTC
Also [Reproducible] with parallel installation of MinGW Master "LibO-dev 3.5.0 – WIN7 Home Premium (64bit) English UI (Build ID:855115d-b204871-e92bf75-4c1bcb5) (daily/Win-x86@7-MinGW/master/2011-12-08_00.09.57)
Comment 2 Rainer Bielefeld Retired 2011-12-07 22:00:44 UTC
Currently only observed with WIN, others not tested.

@Kohei:
Please feel free to reassign (or reset Assignee to default) if it’s not your area or if provided information is not sufficient. Please set Status to ASSIGNED if you accept this Bug.
Comment 3 Jean-Baptiste Faure 2011-12-07 22:31:40 UTC
I reproduce the crash with LibO 3.5 branch (LibreOffice 3.5.0 beta1-test
Build ID: 01d59b7-7f15fca-1f1fd1a-ca8e46d-5bcbce4) 
and master (LibreOffice 3.5.0 Build ID: 5683109-b204871-e92bf75-4c1bcb5-02ece8a)

under Ubuntu 10.04 x86_64.

Best regards. JBF
Comment 4 Rainer Bielefeld Retired 2011-12-07 23:20:41 UTC
At least under WIN i also reproduce the crash closing the second document from WIN task bar.
Comment 5 Petr Mladek 2011-12-08 03:26:08 UTC
Really assign to Kohei. Also put Marcus into CC.
Comment 6 Eike Rathke (retired, only occasionally showing up) 2011-12-08 05:09:20 UTC
This is related to newly introduced ScMultiTextWnd, already having 2 new documents opened and closing the first crashes in SfxItemPool of the EditEngine that apparently is already destroyed. Investigating.
Comment 8 Cor Nouws 2011-12-15 14:13:51 UTC
*** Bug 43821 has been marked as a duplicate of this bug. ***